<resources>
    <string name="app_name">AndroidBottomNav</string>
    <string name="nav_home">HOME</string>
    <string name="nav_search">SEARCH</string>
    <string name="nav_account">Account</string>
    <string name="nav_shopc">Shoppingchart</string>
    <string name="nav_sales">SALES</string>
    <string name="nav_shop">SALES</string>
    <string name="google_maps_API_key">AIzaSyBBgyEix9zlBwpeqUuPqYbBEQAg3GEdhPw</string>
    <string name="title_activity_maps">Map</string>
</resources>
