<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_account"
        android:icon="@mipmap/person"
        android:title="@string/nav_account" />
    <item
        android:id="@+id/nav_sales"
       android:icon="@mipmap/home"
        android:title="@string/nav_sales" />
    <item
        android:id="@+id/nav_shop"
      android:icon="@mipmap/person"
        android:title="@string/nav_shop" />
    <item
        android:id="@+id/nav_search"
        android:icon="@mipmap/search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/home"
        android:title="@string/nav_home" />



</menu>